# fmjpeg2koj

./: CMakeLists.txt
cmake/: fmjpeg2kConfig.cmake.in
include/fmjpeg2k/: dldefine.h
